# coe322-nicoleolv3

./: zero.cpp
hw10/: CMakeLists.txt  tdd.cpp  tdd.cpp~  zeroclasslib.cpp  zeroclasslib.cpp~  zeroclasslib.hpp  zeroclasslib.hpp~  zeroclasstest.cpp
hw11/: CMakeLists.txt  exercises.cpp
hw12/: exercise3.cpp
hw2/: hw2file
hw3/: #exercise3.cpp#  a.out  exercise3.cpp  exercise6.cpp
hw4/: a.out  exercise9  exercise9.cpp  exercise9.cpp~
hw5/: CMakeLists.txt  CMakeLists.txt~  a.out  exercise11.cpp  exercise11.cpp~
hw6/: CMakeLists.txt  a.out  exercise4.cpp  exercise4.cpp~  exercise5.cpp  exercise5.cpp~  newton-lambda.cpp~
hw7/: CMakeLists.txt  CMakeLists.txt~  a.out  exercise1.cpp  exercise1.cpp~
hw8/: CMakeLists.txt  compilescript.sh  exercise4.cpp  exercise4.cpp~
hw9/: CMakeLists.txt  linkheader.hpp  linkimpl.cpp  linkmain.cpp
project/: CMakeLists.txt  tsmp.cpp
redohw5/: CMakeLists.txt  a.out  exercise10.cpp  exercise10.cpp~
